update english description

--- a/index_en.html
+++ b/index_en.html
@@ -1,6 +1,6 @@
 ---
 layout: home_en
 en:
-  share-description: "Studien rund um das Thema Corona, zu Virus, Immunität, Vorbeugung, Behandlung, Impfstoffen und nichtmedizinischen Maßnahmen."
+  share-description: "Studies related to corona, the virus, immunity, prevention, treatment, vaccines and non-medical measures."
   tags: [Corona, Sars-CoV-2, COVID-19, BioNTech, Moderna, AstraZeneca, Johnson & Johnson, Vitamin D, Ivermectin]
 ---
