--- a/index_en.html
+++ b/index_en.html
@@ -1,5 +1,14 @@
 ---
-layout: home_en
+layout: default_en
+common-ext-js:
+  - href: "https://cdnjs.cloudflare.com/ajax/libs/cuttr/1.3.2/cuttr.min.js"
+common-js:
+  - "/assets/js/studies.js"
 en:
   tags: [Corona, Sars-CoV-2, COVID-19, BioNTech, Moderna, AstraZeneca, Johnson & Johnson, Vitamin D, Ivermectin]
 ---
+
+{% assign posts = site.studies | default: site.posts %}
+{% for post in posts reversed %}
+{% include list_en_all.md post=post %}
+{% endfor %}
