--- a/studies_de_vaccines.html
+++ b/studies_de_vaccines.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 group:  Impfstoffe
-common-ext-js:
+ext-js:
   - href: "https://cdnjs.cloudflare.com/ajax/libs/cuttr/1.3.2/cuttr.min.js"
-common-js:
+js:
   - "/assets/js/studies.js"
 ---
 
