--- a/studies_en_all.html
+++ b/studies_en_all.html
@@ -1,8 +1,8 @@
 ---
 layout: default_en
-common-ext-js:
+ext-js:
   - href: "https://cdnjs.cloudflare.com/ajax/libs/cuttr/1.3.2/cuttr.min.js"
-common-js:
+js:
   - "/assets/js/studies.js"
 ---
 
