--- a/studies_en_immunity.html
+++ b/studies_en_immunity.html
@@ -1,9 +1,9 @@
 ---
 layout: default_en
 group:  Immunity
-common-ext-js:
+ext-js:
   - href: "https://cdnjs.cloudflare.com/ajax/libs/cuttr/1.3.2/cuttr.min.js"
-common-js:
+js:
   - "/assets/js/studies.js"
 ---
 
