--- a/index_en.html
+++ b/index_en.html
@@ -1,8 +1,8 @@
 ---
 layout: default_en
-common-ext-js:
+ext-js:
   - href: "https://cdnjs.cloudflare.com/ajax/libs/cuttr/1.3.2/cuttr.min.js"
-common-js:
+js:
   - "/assets/js/studies.js"
 en:
   tags: [Corona, Sars-CoV-2, COVID-19, BioNTech, Moderna, AstraZeneca, Johnson & Johnson, Vitamin D, Ivermectin]
