--- a/search/search_de.html
+++ b/search/search_de.html
@@ -7,7 +7,7 @@ js:     ["/assets/js/search-content.js", "/assets/js/search.js"]
 <article>
 <h1>{{ page.title }}</h1>
 <div class="search">
-  <form action="search" method="get">
+  <form action="search_de" method="get">
     <input type="text" id="search-box" name="query">
     <input type="submit" value="Search">
   </form>
