--- a/search/search_en.html
+++ b/search/search_en.html
@@ -2,12 +2,12 @@
 layout: default
 title:  Search
 ext-js: ["//code.jquery.com/jquery-3.6.0.min.js", "//unpkg.com/lunr/lunr.js"]
-js:     ["/assets/js/search-content-de.js", "/assets/js/search.js"]
+js:     ["/assets/js/search-content-en.js", "/assets/js/search.js"]
 ---
 <article>
 <h1>{{ page.title }}</h1>
 <div class="search">
-  <form action="search_de" method="get">
+  <form action="search_en" method="get">
     <input type="text" id="search-box" name="query">
     <input type="submit" value="Search">
   </form>
