--- a/search/search_en.html
+++ b/search/search_en.html
@@ -1,15 +1,16 @@
 ---
 layout: default
-title:  Search
+title: Search
 ext-js: ["//code.jquery.com/jquery-3.6.0.min.js", "//unpkg.com/lunr/lunr.js"]
-js:     ["/assets/js/search-content-en.js", "/assets/js/search.js"]
+js: ["/assets/js/search-content-en.js", "/assets/js/search.js"]
 ---
 <div class="search">
   <article>
-  <form action="search_en" method="get">
-    <input type="text" id="search-box" name="query">
-    <input type="submit" value="Search">
-  </form>
+    <h3>Search</h3>
+    <form action="search_en" method="get">
+      <input type="text" id="search-box" name="query">
+      <input type="submit" value="Search">
+    </form>
   </article>
   <div id="search-results" class="search-results"></div>
 </div>
