--- a/search/js/search-en.html
+++ b/search/js/search-en.html
@@ -6,13 +6,16 @@ window.store = {
   {%- for study in site.studies %}
     "{{ study.url | slugify }}": {
       "date": "{{ study.date | date: "%Y-%m-%d" }}",
+      "article": "{{ study.id }}",
       "title": "{{ study.en.subtitle | xml_escape }}",
       "author": "{{ study.authors | xml_escape }}",
       "journal": "{{ study.title | xml_escape }}",
       "category": "{% for category in study.en.tags %}{{ category }}{% unless forloop.last %}, {% endunless %}{% endfor %}",
       "content": {{ study.en.description | strip_html | jsonify }},
       "url": "{{ study.credit | xml_escape }}",
-      "group": "{{ study.de.group | xml_escape }}"
+      "group": "{{ study.group | downcase }}",
+      "groupname": "{{ site.data.groups[study.group]['en_name'] | xml_escape }}",
+      "status": "{{ study.status | xml_escape }}"
     }
     {%- unless forloop.last -%},{%- endunless -%}
   {% endfor %}
