--- a/search/search_de.html
+++ b/search/search_de.html
@@ -1,8 +1,8 @@
 ---
-layout: default
+layout: search
 title: Search
-ext-js: ["//code.jquery.com/jquery-3.6.0.min.js", "//unpkg.com/lunr/lunr.js"]
-js: ["/assets/js/search-content-de.js", "/assets/js/search.js"]
+ext-js: ["//code.jquery.com/jquery-3.6.0.min.js", "//unpkg.com/lunr/lunr.js", "//cdnjs.cloudflare.com/ajax/libs/cuttr/1.3.2/cuttr.min.js"]
+js: ["/assets/js/search-content-de.js", "/assets/js/search.js", "/assets/js/studies.js"]
 ---
 
 <div class="search">
@@ -10,7 +10,7 @@ js: ["/assets/js/search-content-de.js", "/assets/js/search.js"]
     <h3>Suche</h3>
     <form action="search_de" method="get">
       <input type="text" id="search-box" name="query">
-      <input type="submit" value="Search">
+      <input type="submit" value="Suche">
       <!-- 
       Statt Submit-Button die Lupe nehmen: <div data-icon="ei-search" data-size="s">
       -->
