--- a/network/hierarchical-edge-bundling/index.html
+++ b/network/hierarchical-edge-bundling/index.html
@@ -1,176 +1,118 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<style>
 
-.node {
-  font: 300 11px "Helvetica Neue", Helvetica, Arial, sans-serif;
-  fill: #bbb;
-}
-
-.node:hover {
-  fill: #000;
-}
-
-.link {
-  stroke: steelblue;
-  stroke-opacity: 0.4;
-  fill: none;
-  pointer-events: none;
-}
-
-.node:hover,
-.node--source,
-.node--target {
-  font-weight: 700;
-}
-
-.node--source {
-  fill: #2ca02c;
-}
-
-.node--target {
-  fill: #d62728;
-}
-
-.link--source,
-.link--target {
-  stroke-opacity: 1;
-  stroke-width: 2px;
-}
-
-.link--source {
-  stroke: #d62728;
-}
-
-.link--target {
-  stroke: #2ca02c;
-}
-
-</style>
 <body>
 <script src="https://d3js.org/d3.v7.min.js"></script>
+
 <script>
 
-var diameter = 960,
-    radius = diameter / 2,
-    innerRadius = radius - 120;
+var colorin = "#00f";
+var colorout = "#f00";
+var colornone = "#ccc";
+var width = 954;
+var radius = width / 2;
 
-var cluster = d3.cluster()
-    .size([360, innerRadius]);
-
-var line = d3.radialLine()
+var line = d3.lineRadial()
     .curve(d3.curveBundle.beta(0.85))
-    .radius(function(d) { return d.y; })
-    .angle(function(d) { return d.x / 180 * Math.PI; });
+    .radius(d => d.y)
+    .angle(d => d.x);
 
-var svg = d3.select("body").append("svg")
-    .attr("width", diameter)
-    .attr("height", diameter)
-    .append("g")
-    .attr("transform", "translate(" + radius + "," + radius + ")");
+var tree = d3.cluster()
+    .size([2 * Math.PI, radius - 100]);
 
-var link = svg.append("g").selectAll(".link"),
-    node = svg.append("g").selectAll(".node");
-
-d3.json("flare.json")
+d3.json("studies.json")
   .then(function(classes) {
 
-  var root = packageHierarchy(classes)
+  var data = hierarchy(classes);
 
-  .sum(function(d) { return d.size; });
+  console.log(data);
 
-  cluster(root);
+  const root = tree(bilink(d3.hierarchy(data)
+    .sort((a, b) => d3.ascending(a.height, b.height) || d3.ascending(a.data.name, b.data.name))));
 
-  link = link
-    .data(packageImports(root.leaves()))
-    .enter().append("path")
-    .each(function(d) { d.source = d[0], d.target = d[d.length - 1]; })
-    .attr("class", "link")
-    .attr("d", line);
+  const svg = d3.select("body").append("svg")
+    .attr("viewBox", [-width / 2, -width / 2, width, width]);
 
-  node = node
+  const node = svg.append("g")
+    .attr("font-family", "sans-serif")
+    .attr("font-size", 10)
+    .selectAll("g")
     .data(root.leaves())
-    .enter().append("text")
-    .attr("class", "node")
+    .join("g")
+    .attr("transform", d => `rotate(${d.x * 180 / Math.PI - 90}) translate(${d.y},0)`)
+    .append("text")
     .attr("dy", "0.31em")
-    .attr("transform", function(d) { return "rotate(" + (d.x - 90) + ")translate(" + (d.y + 8) + ",0)" + (d.x < 180 ? "" : "rotate(180)"); })
-    .attr("text-anchor", function(d) { return d.x < 180 ? "start" : "end"; })
-    .text(function(d) { return d.data.key; })
-    .on("mouseover", mouseovered)
-    .on("mouseout", mouseouted);
-  })
-  .catch(function(error) {
-    throw error;
-});
+    .attr("x", d => d.x < Math.PI ? 6 : -6)
+    .attr("text-anchor", d => d.x < Math.PI ? "start" : "end")
+    .attr("transform", d => d.x >= Math.PI ? "rotate(180)" : null)
+    .text(d => d.data.name)
+    .each(function(d) { d.text = this; })
+    .on("mouseover", overed)
+    .on("mouseout", outed)
+    .call(text => text.append("title").text(d => `${id(d)}
+      ${d.outgoing.length} outgoing
+      ${d.incoming.length} incoming`));
 
-function mouseovered(d) {
-  node
-      .each(function(n) { n.target = n.source = false; });
+  const link = svg.append("g")
+    .attr("stroke", colornone)
+    .attr("fill", "none")
+    .selectAll("path")
+    .data(root.leaves().flatMap(leaf => leaf.outgoing))
+    .join("path")
+    .style("mix-blend-mode", "multiply")
+    .attr("d", ([i, o]) => line(i.path(o)))
+    .each(function(d) { d.path = this; });
 
-  link
-      .classed("link--target", function(l) { if (l.target === d) return l.source.source = true; })
-      .classed("link--source", function(l) { if (l.source === d) return l.target.target = true; })
-    .filter(function(l) { return l.target === d || l.source === d; })
-      .raise();
 
-  node
-      .classed("node--target", function(n) { return n.target; })
-      .classed("node--source", function(n) { return n.source; });
-}
-
-function mouseouted(d) {
-  link
-      .classed("link--target", false)
-      .classed("link--source", false);
-
-  node
-      .classed("node--target", false)
-      .classed("node--source", false);
-}
-
-// Lazily construct the package hierarchy from class names.
-function packageHierarchy(classes) {
-  var map = {};
-
-  function find(name, data) {
-    var node = map[name], i;
-    if (!node) {
-      node = map[name] = data || {name: name, children: []};
-      if (name.length) {
-        node.parent = find(name.substring(0, i = name.lastIndexOf(".")));
-        node.parent.children.push(node);
-        node.key = name.substring(i + 1);
-      }
-    }
-    return node;
+  function overed(event, d) {
+    link.style("mix-blend-mode", null);
+    d3.select(this).attr("font-weight", "bold");
+    d3.selectAll(d.incoming.map(d => d.path)).attr("stroke", colorin).raise();
+    d3.selectAll(d.incoming.map(([d]) => d.text)).attr("fill", colorin).attr("font-weight", "bold");
+    d3.selectAll(d.outgoing.map(d => d.path)).attr("stroke", colorout).raise();
+    d3.selectAll(d.outgoing.map(([, d]) => d.text)).attr("fill", colorout).attr("font-weight", "bold");
   }
 
-  classes.forEach(function(d) {
-    find(d.name, d);
-  });
+  function outed(event, d) {
+    link.style("mix-blend-mode", "multiply");
+    d3.select(this).attr("font-weight", null);
+    d3.selectAll(d.incoming.map(d => d.path)).attr("stroke", null);
+    d3.selectAll(d.incoming.map(([d]) => d.text)).attr("fill", null).attr("font-weight", null);
+    d3.selectAll(d.outgoing.map(d => d.path)).attr("stroke", null);
+    d3.selectAll(d.outgoing.map(([, d]) => d.text)).attr("fill", null).attr("font-weight", null);
+  }
 
-  return d3.hierarchy(map[""]);
+  return svg.node();
+});
+
+function hierarchy(data, delimiter = "-") {
+  let root;
+  const map = new Map;
+  data.forEach(function find(data) {
+    const {name} = data;
+    if (map.has(name)) return map.get(name);
+    const i = name.lastIndexOf(delimiter);
+    map.set(name, data);
+    if (i >= 0) {
+      find({name: name.substring(0, i), children: []}).children.push(data);
+      data.name = name.substring(i + 1);
+    } else {
+      root = data;
+    }
+    return data;
+  });
+  return root;
 }
 
-// Return a list of imports for the given array of nodes.
-function packageImports(nodes) {
-  var map = {},
-      imports = [];
+function bilink(root) {
+  const map = new Map(root.leaves().map(d => [id(d), d]));
+  for (const d of root.leaves()) d.incoming = [], d.outgoing = d.data.imports.map(i => [d, map.get(i)]);
+  for (const d of root.leaves()) for (const o of d.outgoing) o[1].incoming.push(o);
+  return root;
+}
 
-  // Compute a map from name to node.
-  nodes.forEach(function(d) {
-    map[d.data.name] = d;
-  });
-
-  // For each import, construct a link from the source to target node.
-  nodes.forEach(function(d) {
-    if (d.data.imports) d.data.imports.forEach(function(i) {
-      imports.push(map[d.data.name].path(map[i]));
-    });
-  });
-
-  return imports;
+function id(node) {
+  return `${node.parent ? id(node.parent) + "-" : ""}${node.data.name}`;
 }
 
 </script>
-
