--- a/search/search_en.html
+++ b/search/search_en.html
@@ -8,8 +8,8 @@ js: ["/assets/js/search-content-en.js", "/assets/js/search.js"]
   <article>
     <h3>Search</h3>
     <form action="search_en" method="get">
-      <input type="text" id="search-box" name="query">
-      <input type="submit" value="Search">
+      <input type="text" id="search-box" placeholder="Search…" name="query">
+      <button type="submit"><div data-icon="ei-search" data-size="s"></button>
     </form>
   </article>
   <div id="search-results" class="search-results"></div>
