--- a/search/search_de.html
+++ b/search/search_de.html
@@ -2,7 +2,7 @@
 layout: search
 title: Search
 ext-js: ["//code.jquery.com/jquery-3.6.0.min.js", "//unpkg.com/lunr/lunr.js", "//cdnjs.cloudflare.com/ajax/libs/cuttr/1.3.2/cuttr.min.js"]
-js: ["/assets/js/search-content-de.js", "/assets/js/search.js", "/assets/js/studies.js"]
+js: ["/assets/js/search-content-de.js", "/assets/js/search_de.js", "/assets/js/studies.js"]
 ---
 <div class="search">
     <form action="search_de" method="get">
