--- a/search/search_en.html
+++ b/search/search_en.html
@@ -1,5 +1,5 @@
 ---
-layout: search
+layout: search_en
 title: Search
 ext-js: ["//code.jquery.com/jquery-3.6.0.min.js", "//unpkg.com/lunr/lunr.js", "//cdnjs.cloudflare.com/ajax/libs/cuttr/1.3.2/cuttr.min.js"]
 js: ["/assets/js/search-content-en.js", "/assets/js/search_en.js", "/assets/js/studies.js"]
