--- a/search/search_de.html
+++ b/search/search_de.html
@@ -1,7 +1,7 @@
 ---
 layout: search
 title: Search
-ext-js: ["//code.jquery.com/jquery-3.6.0.min.js", "//unpkg.com/lunr/lunr.js", "//cdnjs.cloudflare.com/ajax/libs/cuttr/1.3.2/cuttr.min.js"]
+ext-js: ["//code.jquery.com/jquery-3.6.0.min.js", "//unpkg.com/lunr/lunr.min.js", "//unpkg.com/lunr-languages/lunr.stemmer.support.js", "//unpkg.com/lunr-languages/lunr.de.js", "//cdnjs.cloudflare.com/ajax/libs/cuttr/1.3.2/cuttr.min.js"]
 js: ["/assets/js/search-content-de.js", "/assets/js/search_de.js", "/assets/js/studies.js"]
 ---
 <div class="search">
